syntax = "proto3";
package customer;
option go_package = "example/grpc";
import "google/api/annotations.proto";

// Định nghĩa server Customer
service Customer {

  // Get customer theo CustomerFilter (Trả từ server về client)
  rpc GetCustomers(CustomerFilter) returns (stream CustomerRequest) {}

  // Tạo một customer (Nhận request từ client)
  rpc CreateCustomer (CustomerRequest) returns (CustomerResponse) {
    option (google.api.http) = {
      post: "/v1"
      body: "*"
    };
  }
}

// Request message để tạo một customer mới.
message CustomerRequest {
  int32 id = 1;  // Unique ID
  string name = 2;
  string email = 3;
  string phone= 4;
  
  message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip = 4;
    bool isShippingAddress = 5; 
  }

  repeated Address addresses = 5;
}

message CustomerResponse {
  int32 id = 1;
  bool success = 2;
}
message CustomerFilter {    
  string keyword = 1;
}